[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Menu/party_background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/pkmnfl.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://PokemonPartyScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Menu/gender_icons.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu/healthbar.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu/standby_pokemon_background.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu/Squirtle.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/Charmander.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/main_pokemon_background.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu/Bulbasaur.png" type="Texture" id=10]
[ext_resource path="res://Assets/Menu/exit_background_button.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PokemonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="PokemonPartyScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="FirstPokemonSlot" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="FirstPokemonSlot"]
position = Vector2( 44, 48 )
texture = ExtResource( 9 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="FirstPokemonSlot"]
position = Vector2( 28, 47 )
texture = ExtResource( 8 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="FirstPokemonSlot"]
position = Vector2( 59, 20 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FirstPokemonSlot"]
autoplay = "IDLE"
anims/IDLE = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="LevelLabel" type="Label" parent="FirstPokemonSlot"]
margin_left = 50.0
margin_top = 50.0
margin_right = 60.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )
text = "4
"

[node name="HealthLabel" type="Label" parent="FirstPokemonSlot"]
margin_left = 50.0
margin_top = 66.0
margin_right = 60.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "23
"

[node name="MaxHealthLabel" type="Label" parent="FirstPokemonSlot"]
margin_left = 67.0
margin_top = 66.0
margin_right = 77.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "30
"

[node name="GenderIcon" type="Sprite" parent="FirstPokemonSlot"]
position = Vector2( 78, 53 )
texture = ExtResource( 4 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="FirstPokemonSlot"]
position = Vector2( 52.5, 62 )
scale = Vector2( 1.7, 1 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="SecondPokemonSlot" type="Node2D" parent="."]
position = Vector2( 96, -1 )

[node name="Background" type="Sprite" parent="SecondPokemonSlot"]
position = Vector2( 67, 22 )
texture = ExtResource( 6 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="SecondPokemonSlot"]
position = Vector2( 7, 23 )
texture = ExtResource( 10 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="SecondPokemonSlot"]
position = Vector2( 55, 19 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SecondPokemonSlot"]
autoplay = "IDLE"
anims/IDLE = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="LevelLabel" type="Label" parent="SecondPokemonSlot"]
margin_left = 41.0
margin_top = 25.0
margin_right = 51.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "4
"

[node name="HealthLabel" type="Label" parent="SecondPokemonSlot"]
margin_left = 106.0
margin_top = 25.0
margin_right = 116.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "23
"

[node name="MaxHealthLabel" type="Label" parent="SecondPokemonSlot"]
margin_left = 123.0
margin_top = 25.0
margin_right = 133.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "30
"

[node name="GenderIcon" type="Sprite" parent="SecondPokemonSlot"]
position = Vector2( 67, 28 )
texture = ExtResource( 4 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="SecondPokemonSlot"]
position = Vector2( 108.5, 21 )
scale = Vector2( 1.7, 1 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="ThirdPokemonSlot" type="Node2D" parent="."]
position = Vector2( 96, 23 )

[node name="Background" type="Sprite" parent="ThirdPokemonSlot"]
position = Vector2( 67, 22 )
texture = ExtResource( 6 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="ThirdPokemonSlot"]
position = Vector2( 7, 23 )
texture = ExtResource( 7 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="ThirdPokemonSlot"]
position = Vector2( 55, 19 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ThirdPokemonSlot"]
autoplay = "IDLE"
anims/IDLE = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="LevelLabel" type="Label" parent="ThirdPokemonSlot"]
margin_left = 41.0
margin_top = 25.0
margin_right = 51.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "4
"

[node name="HealthLabel" type="Label" parent="ThirdPokemonSlot"]
margin_left = 106.0
margin_top = 25.0
margin_right = 116.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "23
"

[node name="MaxHealthLabel" type="Label" parent="ThirdPokemonSlot"]
margin_left = 123.0
margin_top = 25.0
margin_right = 133.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "30
"

[node name="GenderIcon" type="Sprite" parent="ThirdPokemonSlot"]
position = Vector2( 67, 28 )
texture = ExtResource( 4 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="ThirdPokemonSlot"]
position = Vector2( 108.5, 21 )
scale = Vector2( 1.7, 1 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="FourthPokemonSlot" type="Node2D" parent="."]
position = Vector2( 96, 47 )

[node name="Background" type="Sprite" parent="FourthPokemonSlot"]
position = Vector2( 67, 22 )
texture = ExtResource( 6 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="FourthPokemonSlot"]
position = Vector2( 7, 23 )
texture = ExtResource( 7 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="FourthPokemonSlot"]
position = Vector2( 55, 19 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FourthPokemonSlot"]
autoplay = "IDLE"
anims/IDLE = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="LevelLabel" type="Label" parent="FourthPokemonSlot"]
margin_left = 41.0
margin_top = 25.0
margin_right = 51.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "4
"

[node name="HealthLabel" type="Label" parent="FourthPokemonSlot"]
margin_left = 106.0
margin_top = 25.0
margin_right = 116.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "23
"

[node name="MaxHealthLabel" type="Label" parent="FourthPokemonSlot"]
margin_left = 123.0
margin_top = 25.0
margin_right = 133.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "30
"

[node name="GenderIcon" type="Sprite" parent="FourthPokemonSlot"]
position = Vector2( 67, 28 )
texture = ExtResource( 4 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="FourthPokemonSlot"]
position = Vector2( 108.5, 21 )
scale = Vector2( 1.7, 1 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="FifthPokemonSlot" type="Node2D" parent="."]
position = Vector2( 96, 71 )

[node name="Background" type="Sprite" parent="FifthPokemonSlot"]
position = Vector2( 67, 22 )
texture = ExtResource( 6 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="FifthPokemonSlot"]
position = Vector2( 7, 23 )
texture = ExtResource( 7 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="FifthPokemonSlot"]
position = Vector2( 55, 19 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FifthPokemonSlot"]
autoplay = "IDLE"
anims/IDLE = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="LevelLabel" type="Label" parent="FifthPokemonSlot"]
margin_left = 41.0
margin_top = 25.0
margin_right = 51.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "4
"

[node name="HealthLabel" type="Label" parent="FifthPokemonSlot"]
margin_left = 106.0
margin_top = 25.0
margin_right = 116.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "23
"

[node name="MaxHealthLabel" type="Label" parent="FifthPokemonSlot"]
margin_left = 123.0
margin_top = 25.0
margin_right = 133.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "30
"

[node name="GenderIcon" type="Sprite" parent="FifthPokemonSlot"]
position = Vector2( 67, 28 )
texture = ExtResource( 4 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="FifthPokemonSlot"]
position = Vector2( 108.5, 21 )
scale = Vector2( 1.7, 1 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="SixthPokemonSlot" type="Node2D" parent="."]
position = Vector2( 96, 95 )

[node name="Background" type="Sprite" parent="SixthPokemonSlot"]
position = Vector2( 67, 22 )
texture = ExtResource( 6 )
hframes = 2

[node name="PokemonPartySprite" type="Sprite" parent="SixthPokemonSlot"]
position = Vector2( 7, 23 )
texture = ExtResource( 7 )
hframes = 2
region_enabled = true
region_rect = Rect2( 30, 9, 70, 24 )

[node name="PokemonName" type="Sprite" parent="SixthPokemonSlot"]
position = Vector2( 55, 19 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, -1, 73, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SixthPokemonSlot"]
autoplay = "IDLE"
anims/IDLE = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="LevelLabel" type="Label" parent="SixthPokemonSlot"]
margin_left = 41.0
margin_top = 25.0
margin_right = 51.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "4
"

[node name="HealthLabel" type="Label" parent="SixthPokemonSlot"]
margin_left = 106.0
margin_top = 25.0
margin_right = 116.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "23
"

[node name="MaxHealthLabel" type="Label" parent="SixthPokemonSlot"]
margin_left = 123.0
margin_top = 25.0
margin_right = 133.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "30
"

[node name="GenderIcon" type="Sprite" parent="SixthPokemonSlot"]
position = Vector2( 67, 28 )
texture = ExtResource( 4 )
hframes = 2

[node name="HealthBar" type="Sprite" parent="SixthPokemonSlot"]
position = Vector2( 108.5, 21 )
scale = Vector2( 1.7, 1 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 3 )

[node name="CancelSprite" type="Sprite" parent="."]
position = Vector2( 211, 144 )
texture = ExtResource( 11 )
hframes = 2
